<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Cathy A.</string>
    <string name="last_name">Li</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">    I am a Computer Science student at Queens College, and I am currently living in New York.</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 FIRST HOBBY:Reading</string>
    <string name="profile_hobby_second_text">🥈 SECOND HOBBY:Coding</string>
    <string name="profile_hobby_third_text">🥉 THIRD HOBBY:Traveling</string>
</resources>